Stitch integration and docs

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,11 +9,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 # Optional: Supabase service role key (only for server-side admin tasks; keep secret)
 # SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
-# Stitch Express (payments – South Africa)
-# Get from: https://express.stitch.money – API keys / integration
-# If not set, checkout redirects straight to success (for local testing only).
-# STITCH_API_URL=https://api.stitch.money/...
-# STITCH_API_KEY=your-stitch-api-key
+# Stitch Express (payments – South Africa). From Stitch → API Details.
+# STITCH_API_BASE_URL=https://express.stitch.money
+# STITCH_CLIENT_ID=test-xxxx
+# STITCH_CLIENT_SECRET=xxxx   (click View Client Secret)
 
-# App URL (for payment redirects and webhooks). Use your live URL in production.
+# App URL – no trailing slash. Production: https://paperwalls.vercel.app
 NEXT_PUBLIC_APP_URL=http://localhost:3000
